--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "angular": "~1.2.16",
     "bootstrap": "~3.1.1",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angular-animate": "~1.2.16"
   }
 }
