--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "grunt": "~0.4.4",
     "grunt-sass": "~0.12.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt-contrib-uglify": "~0.5.1",
+    "grunt-usemin": "~2.3.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-copy": "~0.5.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
