--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "grunt-contrib-uglify": "~0.5.1",
     "grunt-usemin": "~2.3.0",
     "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.10.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
