--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "youtube ui for simultaneous search and playlist playback",
   "main": "index.html",
   "dependencies": {
-    "grunt": "~0.4.4",
-    "grunt-sass": "~0.12.1"
+    "connect": "~3.1.1",
+    "serve-static": "~1.5.2"
   },
   "devDependencies": {
+    "grunt": "~0.4.4",
+    "grunt-sass": "~0.12.1",
     "grunt-contrib-uglify": "~0.5.1",
     "grunt-usemin": "~2.3.0",
     "grunt-contrib-concat": "~0.5.0",
